class PatternsCategory < ApplicationRecord
  belongs_to :pattern
  belongs_to :category
end
