class PatternsMagazine < ApplicationRecord
  belongs_to :pattern
  belongs_to :magazine
end
