erDiagram
    %% Entities
    USERS {
        int id PK
        string name
        string email
        string password
        string location "city, country"
        string username "unique"
        string language
        string pronouns "he/him, she/her, they/them"
        string biography
        string units "metric, imperial"
        boolean private_profile "default false"
        string role "user, yarn_disributor, magazine_publisher, shop, admin"
        string website
        string preferred_currency "USD, EUR, GBP"
    }
    FOLLOWERS {
        int id PK
        int user_id FK
        int follower_id FK
    }
    PURCHASES {
        int id PK
        int user_id FK
        int pattern_id FK
        float price
        string currency
        date purchase_date
    }
    FAVOURITES {
        int id PK
        int user_id FK
        int pattern_id FK
        int yarn_id FK
        int project_id FK
    }
    PROJECTS {
        int id PK
        int user_id FK
        int pattern_id FK
        string name
        string status "in_queue, in_progress, finished"
        string notes
        string size
        number stiches
        number rows
        string swatch_size
        string guage_pattern
        date project_started
        date project_finished
        }
    PATTERNS {
        int id PK
        int user_id FK
        string name
        string craft_type "knitting, crochet, weaving"
        float price
        string currency
        string overal_yarn_weight "lace, fingering, sport, dk"
        number nbr_stitches
        number nbr_rows
        number swatch_size
        number repeats
        string guage_pattern
        number total_yardage
        string[] languages "en, fr, de"
        string[] sizes "XS, S, M, L, XL"
        string notes
        string picture_path
        string pdf_path
        number view_count
        number likes
        number difficulty_rating "1-5"
        number overall_rating "1-5"
        first_published_date
        release_date
    }
    YARNS {
        int id PK
        int user_id FK
        string weight
        number meterage
        number unit_weight
        string weight
        string guage
        string fibers
        string texture
        boolean machine_wash
        string colors
        string pictures_path
        string dye
        string origin
        string notes
    }
    NEEDLES {
        int id PK
        string metric
        string us_size
        string uk_size

    }
    HOOKS {
        int id PK
        string metric_mm
        string us_size
        string uk_size
    }
    CATEGORIES {
        int id PK
        string type
        string main_category
        string sub_category
    }
    TAGS {
        int id PK
        string name
    }
    ISSUES {
        int id PK
        int magazine_id FK
        string name
        string release_date
        string pictures_path
    }
    MAGAZINES {
        int id PK
        int user_id FK
        string name
        string website
        string cover_picture_path
        string biography
    }
    PATTERNS_YARNS {
        int id PK
        int pattern_id FK
        int yarn_id FK
    }
    PATTERNS_CATEGORIES {
        int id PK
        int pattern_id FK
        int category_id FK
    }
    PATTERNS_TAGS {
        int id PK
        int pattern_id FK
        int tag_id FK
    }
    PATTERNS_NEEDLES {
        int id PK
        int pattern_id FK
        int needle_id FK
    }
    PATTERNS_HOOKS {
        int id PK
        int pattern_id FK
        int hook_id FK
    }
    PROJECTS_YARNS {
        int id PK
        int project_id FK
        int yarn_id FK
    }
    PROJECTS_CATEGORIES {
        int id PK
        int project_id FK
        int category_id FK
    }
    PROJECTS_TAGS {
        int id PK
        int project_id FK
        int tag_id FK
    }
    PROJECTS_NEEDLES {
        int id PK
        int project_id FK
        int needle_id FK
    }
    PROJECTS_HOOKS {
        int id PK
        int project_id FK
        int hook_id FK
    }
    YARNS_NEEDLES {
        int id PK
        int yarn_id FK
        int needle_id FK
    }
    YARNS_HOOKS {
        int id PK
        int yarn_id FK
        int hook_id FK
    }
    PATTERNS_MAGAZINES {
        int id PK
        int pattern_id FK
        int magazine_id FK
    }




    %% Relationships
    V USERS o{--o{ FOLLOWERS : "has many followers"
    V FOLLOWERS o{--o{ USERS : "has many followees"
    V USERS ||--o{ PURCHASES : "has many purchases" V
    V USERS ||--o{ FAVOURITES : "has many favourites" V
    V USERS ||--o{ PROJECTS : "has many projects" V
    V USERS ||--o{ PATTERNS : "has many patterns" V
    V USERS ||--o{ USERS_YARNS : "has many yarns" V
    V USERS ||--o{ MAGAZINES : "has many magazines" V
    V MAGAZINES ||--o{ USERS : "has many designers" V

    V PATTERNS ||--o{ PROJECTS : "is in many projects" V
    V PATTERNS ||--o{ FAVOURITES : "is favourited in" V
    V PATTERNS ||--o{ PURCHASES: "is purchased in" V
    V PATTERNS ||--o{ PATTERNS_YARNS : "uses" V
    V PATTERNS ||--o{ PATTERNS_CATEGORIES : "is in many categories" V
    V PATTERNS ||--o{ PATTERNS_TAGS : "has many tags" V
    V PATTERNS ||--o{ PATTERNS_NEEDLES : "has many needle sizes" V
    V PATTERNS ||--o{ PATTERNS_HOOKS : "has many hook sizes" V
    V CATEGORIES ||--o{ PATTERNS_CATEGORIES : "is in many patterns" V
    V TAGS ||--o{ PATTERNS_TAGS : "has many patterns" V
    V NEEDLES ||--o{ PATTERNS_NEEDLES : "has many patterns" V
    V HOOKS ||--o{ PATTERNS_HOOKS : "has many patterns" V
    V YARNS ||--o{ PATTERNS_YARNS : "is used in" V
    V PATTERNS ||--o{ PATTERNS_MAGAZINES : "is in many magazines" V
    V MAGAZINES ||--o{ PATTERNS_MAGAZINES : "has many patterns" V

    V PROJECTS ||--o{ FAVOURITES : "is favourited in" V
    V PROJECTS ||--o{ PROJECTS_YARNS : "uses" V
    V PROJECTS ||--o{ PROJECTS_CATEGORIES : "is in many categories" V
    V PROJECTS ||--o{ PROJECTS_TAGS : "has many tags" V
    V PROJECTS ||--o{ PROJECTS_HOOKS : "has many hook sizes" V
    V PROJECTS ||--o{ PROJECTS_NEEDLES : "has many needle sizes" V
    V CATEGORIES ||--o{ PROJECTS_CATEGORIES : "is in many projects" V
    V TAGS ||--o{ PROJECTS_TAGS : "has many projects" V
    V HOOKS ||--o{ PROJECTS_HOOKS : "has many projects" V
    V YARNS ||--o{ PROJECTS_YARNS : "is used in" V

    V YARNS||--o{ FAVOURITES : "is favourited in" V
    V YARNS ||--o{ YARNS_NEEDLES : "has many needle sizes"
    V YARNS ||--o{ USERS_YARNS : "has many users"
    V NEEDLES ||--o{ YARNS_NEEDLES : "has many yarns" V
    V NEEDLES ||--o{ PROJECTS_NEEDLES : "has many projects" V
    V YARNS ||--o{ YARNS_HOOKS : "has many hook sizes" V
    V HOOKS ||--o{ YARNS_HOOKS : "has many yarns" V

    V MAGAZINES ||--o{ ISSUES : "has many issues"